PM-1855: Resizing homepage red color spill corrected

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2796,7 +2796,7 @@ ol li {
     input[type="reset"],
     button,
     .button {
-        display: block;
+        /* display: block; */
         width: 100%;
         font-size: 1.25em;
         padding: 0.75em 0 0.75em 0;
